# segway_mpc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
app/: global_timer.h
app/drivers/cli/: cli_rtt.c  cli_rtt.h
app/drivers/i2c_manager/: i2c_manager.c  i2c_manager.h
app/drivers/imu_manager/: imu_manager.c  imu_manager.h
app/drivers/mpu6050/: I2C.c  I2C.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h  mpu6050.c  mpu6050.h
app/drivers/queue_manager/: queue_manager.c  queue_manager.h
app/drivers/spi_manager/: spi_manager.c  spi_manager.h
app/drivers/step_motor/: step_manager.c  step_manager.h
app/drivers/sysview/: sysview_macros.c  sysview_macros.h
app/logger/: logger.c  logger.h
app/main/: app_main.c
app/tasks/cli_task/: cli_commands.c  cli_commands.h  cli_task.c  cli_task.h
app/tasks/mpc_task/: mpc_task.c  mpc_task.h
app/tasks/sensors_task/: sensors_manager.c  sensors_manager.h  sensors_task.c  sensors_task.h
cubemx/: .mxproject  CMakeLists.txt  STM32H725XG_FLASH.ld  segway_mpc.ioc
cubemx/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_it.h
cubemx/Core/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32h7xx_it.c  tim.c
cubemx/cmake/: gcc-arm-none-eabi.cmake
cubemx/cmake/stm32cubemx/: CMakeLists.txt
